--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-    background-color: #0000FF;
+    background-color: #F0F8FF;
     display: flex;
     position: relative;
     font-size: 12px;
