--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html{
-    background-color:#F0F8FF;
+    background-color:#F0FFFF;
     display: flex;
     position: relative;
     font-size: 12px;
